Added logs for refresh

--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -8,9 +8,9 @@ services:
     environment:
       - token=rxk38rh5qtyw95fkvm7kgfceh4mh6u #Example value from readme
       - streamersUrl=https://www.twitch.tv/directory/game/Warframe
-      - streamersUrl=https://www.twitch.tv/directory/game/Rocket%20League?tl=c2542d6d-cd10-4532-919b-3d19f30a768b
-      - streamersUrl=https://www.twitch.tv/directory/game/Warframe?tl=c2542d6d-cd10-4532-919b-3d19f30a768b
-      - streamersUrl=https://www.twitch.tv/kellphy/videos
+      #- streamersUrl=https://www.twitch.tv/directory/game/Rocket%20League?tl=c2542d6d-cd10-4532-919b-3d19f30a768b
+      #- streamersUrl=https://www.twitch.tv/directory/game/Warframe?tl=c2542d6d-cd10-4532-919b-3d19f30a768b
+      #- streamersUrl=https://www.twitch.tv/kellphy/videos
       - watchAlwaysTopStreamer=true
       #- channelsWithPriority=kellphy
       #- userAgent=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36
