Auto refresh streamers after watching of failing because why not

--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -7,19 +7,20 @@ services:
     restart: always
     environment:
       - token=rxk38rh5qtyw95fkvm7kgfceh4mh6u #Example value from readme
-      - streamersUrl=https://www.twitch.tv/directory/game/Warframe
+      - streamersUrl=https://www.twitch.tv/directory/game/Warframe?tl=c2542d6d-cd10-4532-919b-3d19f30a768b
       #- streamersUrl=https://www.twitch.tv/directory/game/Rocket%20League?tl=c2542d6d-cd10-4532-919b-3d19f30a768b
-      #- streamersUrl=https://www.twitch.tv/directory/game/Warframe?tl=c2542d6d-cd10-4532-919b-3d19f30a768b
       #- streamersUrl=https://www.twitch.tv/kellphy/videos
-      - watchAlwaysTopStreamer=true
+      #- watchAlwaysTopStreamer=true
       #- channelsWithPriority=kellphy
       #- userAgent=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36
       #- scrollDelay=2000
       #- scrollTimes=5
-      - minWatching=5
-      - maxWatching=10
-      #- streamerListRefresh=2
-      #- streamerListRefreshUnit=hour
+      #- minWatching=5
+      #- maxWatching=10
+      #- noChannelFoundWait=5
+      #- checkForDrops=true
+      #- browserClean=1
+      #- browserCleanUnit=hour
       #- browserScreenshot=false
       #- proxy=ip:port
       #- proxyAuth=username:password
